--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-# DB_HOST=34.95.195.12
+# DB_HOST=master-destroyer-st4lnb
 # DB_PORT=3306
 # DB_DATABASE=root
 # DB_USERNAME=root
