--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ DB_CONNECTION=mysql
 # DB_PORT=3306
 # DB_DATABASE=root
 # DB_USERNAME=root
-# DB_PASSWORD=riit
+# DB_PASSWORD=root
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
