--- a/.env
+++ b/.env
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-# DB_HOST=mysql://root:root@master-destroyer-st4lnb:3306/root
-# DB_PORT=3306
-# DB_DATABASE=root
-# DB_USERNAME=root
-# DB_PASSWORD=root
+DB_HOST=mysql://root:root@master-destroyer-st4lnb:3306/root
+DB_PORT=3306
+DB_DATABASE=root
+DB_USERNAME=root
+ DB_PASSWORD=root
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
